Update ExecutorManager.java